syntax = "proto3";

package grpc_auth;

service AuthService {
  rpc CreateCredential(CreateCredentialRequest) returns (CreateCredentialResponse);
  rpc VerifyPassword(VerifyPasswordRequest) returns (VerifyPasswordResponse);
  rpc Signout(SignoutRequest) returns (SignoutRequest);
  rpc RefreshTokens(RefreshTokensRequest) returns (RefreshTokensResponse);
  rpc VerifyRefreshToken(VerifyRefreshTokenRequest) returns (VerifyRefreshTokenResponse);
}

message CreateCredentialRequest {
  string userId = 1;
  string password = 2;
}

message CreateCredentialResponse {
  string createdAt = 1;
}

message VerifyPasswordRequest {
  string userId = 1;
  string password = 2;
}

message VerifyPasswordResponse {
  string verified = 1;
}

message SignoutRequest {
  string userId = 1;
  string tokenIdentifier = 2;
}

message SignoutResponse {
  string signedOut = 1;
}

message RefreshTokensRequest {
  string userId = 1;
  string refreshToken = 2;
}

message RefreshTokensResponse {
  string refreshToken = 1;
  string accessToken = 2;
}


message VerifyRefreshTokenRequest {
  string refreshToken = 1;
}

message VerifyRefreshTokenResponse {
  string verified = 1;
}

