syntax = "proto3";

package grpc_user;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc UserExists(UserExistsRequest) returns (UserExistsResponse);
}

message CreateUserRequest {
  string email = 1;
  string phone = 2;
  string firstName = 3;
  string lastName = 4;
  string password = 5;
  string avatar = 6;
}

message CreateUserResponse {
  string id = 1;
  string createdAt = 2;
  string updatedAt = 3;
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByEmailRequest {
  string userEmail = 1;
}

message UserExistsRequest {
  string email = 1;
  string phone = 2;
}

message UserMessage {
  string id = 1;
  string createdAt = 2;
  string updatedAt = 3;
  string account = 4;
  string email = 5;
  string phone = 6;
  string firstName = 7;
  string lastName = 8;
  string title = 9;
  UserRole role = 10;
  string password = 11;
  string refreshToken = 12;

  enum UserRole {
    OWNER = 0;
    ADMIN = 1;
    AGENT = 2;
  }
}

message UserResponse {
  UserMessage user = 1;
}

message UserExistsResponse {
  bool userExists = 1;
}